--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="home-blog clearfix">
             <ul>
 
-              <!-- Begin Student 1 -->
+              <!-- Begin Fabiola -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -117,9 +117,9 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 1 -->
+              <!-- End Fabiola -->
 
-              <!-- Begin Student 2 -->
+              <!-- Begin Max Lee -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
@@ -142,7 +142,7 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 2 -->
+              <!-- End Max Lee -->
 
               <!-- Begin Student 3 -->
               <li class="home-blog-post">
@@ -167,10 +167,10 @@
                 </div>
                 <div class="clear"></div>
               </li>
-              <!-- End Student 3 -->
+              <!-- End Patrick -->
 
               <!-- Begin Student 4 -->
-              <li class="home-blog-post">
+              <!-- <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
                     <img width="304" height="304" class="prof-image" src="img/students/student_name_index_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
@@ -191,7 +191,7 @@
                   <p>Excerpt.</p>
                 </div>
                 <div class="clear"></div>
-              </li>
+              </li> -->
               <!-- End Student 4 -->
 
               <!-- Duplicate li code block above to place more students here -->
